--- a/Develop/package.json
+++ b/Develop/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "inquirer": "^12.1.0"
   }
 }
